# mlops_practice

./: .gitignore  README.md  pyproject.toml
practice/level_0/: README.md
practice/level_0/part1_database/: docker-compose.yaml  table_creator.py
practice/level_0/part2_model_development/: base_train.py  base_validate_save_model.py  db_train.py  db_validate_save_model.py  pipeline_train.py  pipeline_validate_save_model.py
practice/level_0/part3_model_registry/: docker-compose.yaml  load_model_from_registry.py  save_model_to_registry.py
practice/level_0/part5_fastapi/: crud_pydantic.py  multi_param.py  query_param.py
practice/level_0/part6_api_serving/: app.py  download_model.py
practice/level_0/part7_kafka/: connect.Dockerfile  sink_connector.json  source_connector.json  target-docker-compose.yaml  target.Dockerfile
practice/level_0/part8_stream/: Dockerfile  grafana-docker-compose.yaml
