[tool.poetry]
name = "mlops-practice"
version = "0.1.0"
description = "MLOps practice"
authors = ["Sungchul Kim <sungchul7039@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
