[tool.poetry]
name = "mlops-practice"
version = "0.1.0"
description = "MLOps practice"
authors = ["Sungchul Kim <sungchul7039@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.10"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"
mlflow = "^2.19.0"
boto3 = "^1.35.92"
fastapi = {extras = ["all"], version = "^0.115.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
